--- a/week01/styles/chamber-site-plan.css
+++ b/week01/styles/chamber-site-plan.css
@@ -9,7 +9,7 @@
   header, main, footer{
     max-width:640%;
     padding:0.5rem;
-    margin: 4cqb;
+    margin: 2rem;
     background-color: #2d545e; /*night Blue #2d545e, Night Blue Shadow: #12343b*/
     gap: 2rem;
   }
@@ -34,6 +34,10 @@ h1, h4{
     color: rgb(221, 218, 218);
 }
 
-a{
-    color: #e9cdaf;
+img {
+    padding: 2rem;
+      
+}
+h4{
+    font-size: 30pt;
 }
