--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 500px){
     header{    
-      color: white;
+      color: #1a2e05;
       display: block;
      align-items: center;
      
@@ -58,8 +58,8 @@
     #lastModified{
         font-size: small;
         margin-top: 0.5rem;
-        color: rgb(255, 255, 255);
-        text-shadow: rgb(20, 9, 9) 0.5px 2px 8px;
+        color: #1a2e05;
+        text-shadow: rgb(252, 240, 240) 0.5px 2px 8px;
 
         
     }
