--- a/styles/larger.css
+++ b/styles/larger.css
@@ -2,7 +2,7 @@
     header{    
       color: #1a2e05;
       display: block;
-     align-items: center;
+      align-items: center;     
      
       text-align: center;
     }
@@ -15,15 +15,19 @@
         font-size: 20pt;
     }
 
-
-    nav {
+  
+    #menu{
+      display: none;
+      
+    }
+    .myNav{
       display: flex;
-        
     }
-    nav a {
-      flex: 1 1 100%;
+    .myNav li { 
+      display: block;
+      flex: 1 1 100%
+    }
 
-    }
     
     #parent{
       display: grid;
@@ -33,17 +37,14 @@
     .card{
         box-shadow: rgb(20, 9, 9) 0.5px 2px 8px;
     }
-   
-
-      
+    
+        
     
     main h1{
         
         text-align: left;
         font-size: 160%;
     }
-
-  
 
     footer p{
         display: block;
@@ -63,6 +64,13 @@
 
         
     }
+
+    .background{
+      display: none;
+      color: white;
+      color: w;
+  }
+  
     
 }
   
