--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -309,5 +309,25 @@ footer{
     color: #062129;
 }
 
+#footer2{
+  padding-bottom: 1rem;
+}
 
+
+
+.lastfooter{
   
+  padding-top:1rem ;
+  border-top: solid black;
+  border-width: 0.5px;
+  
+}
+  
+#lastModified{
+  font-size: 8pt;
+  border-top: solid black;
+  border-width: 0.5px;
+  padding-top: 1rem;
+
+}
+
