--- a/styles/base.css
+++ b/styles/base.css
@@ -50,6 +50,28 @@ header, footer{
 }
 
 
+.profileparent img{
+    align-self: center;
+    border-radius:100px;
+    
+    display: block;
+  margin-left: auto;
+  margin-right: auto; 
+
+
+}
+.profileparent p{
+    font-size: 25px;
+    text-align: center;
+    font-style: oblique;
+    padding-bottom: 1rem;
+}
+
+
+
+
+
+
 main h1{
     font-size: 110%;
     
@@ -119,7 +141,10 @@ footer p{
   display: block;
   text-align: center;
   font-size: 120%;
+
+  
 }
+
 .footerFirstP {
     font-size: 18pt;
     
@@ -148,7 +173,7 @@ footer p{
 	background-color: #eee;
 	color: #000;
  	position: absolute;
-	top: 9rem;
+	top: 1rem;
 	left: 1rem;
 	
 }
@@ -203,38 +228,61 @@ footer p{
 
 
 /* making a dark mode */
-.background{
-    background-color: rgba(14, 30, 10, 120);
-     
-    padding: 2rem;
-    max-width: 100%;
+
+.firstnav{
+    position: relative;
 }
+
+
 
 #darktheme{
     position: absolute ;
-   	top: 1rem;
+   	top: 0.1rem;
 	right: 1rem;
 	font-size: 3rem;
-	cursor: pointer;
-	font-size: 2rem;
-    
-    
+	cursor: pointer;	
+    background: transparent;  
+    border: none; 
 
 }
+#hero{
+    margin: 10px auto;
+	position: relative;
+	border: 1px solid rgba(0,0,0,.1);
+   
+	
 
+}
+#hero img{
+    width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+#labelforhero{
+        position: absolute;
+        top: 30px;
+        left: 30px;
+        background: radial-gradient(#fff, #4D5B97);
+        border: 1px solid rgba(0,0,0,.75);
+        padding: 1.5rem;
+        box-shadow: 0 0 3rem #fff;
+        opacity: 0.75;
+        border-radius: 1.2rem;
+        /* Buenas */
+ }
+
+ .labelforhero p {
+	margin: 0;
+	padding: .25rem;
+	font-weight: 700;
+	font-size: 2rem;
+	font-family:"Great Vibes", serif;
+}
+
+
+#map{
+    padding:1rem;
     
+}
 
-    
-
-
-
-/* #darktheme::before {
-	content: ".contrast-svgrepo-com";
-    color: #8DA242;
-} */
-
-
-
-/* .dark.main{
-    background-color: #000;
-} */
