--- a/styles/larger.css
+++ b/styles/larger.css
@@ -12,11 +12,10 @@
 
     .profileparent h2{
      
-      align-items:center
-    
+      align-items:center    
 
     padding-top: 14%;
-    padding-left: 45%;
+    padding-right: 45%;
      
     }
 
