--- a/styles/larger.css
+++ b/styles/larger.css
@@ -12,10 +12,8 @@
 
     .profileparent h2{
      
-      align-items:center    
-
-   
-    padding-right: 60%;
+      align:left;
+ 
      
     }
 
