--- a/styles/larger.css
+++ b/styles/larger.css
@@ -5,21 +5,21 @@
       display: flex;
      
     }
-    .profileparent img{
+   /* .profileparent img{
     
-      margin-left: 30%;
+   
     }
 
     .profileparent h2{
      
-      align:left;
+      align:left; */
       
-      margin-rigt: 30%;
+      
     
     
  
      
-    }
+    
 
 
   
