--- a/styles/larger.css
+++ b/styles/larger.css
@@ -4,15 +4,18 @@
     .profileparent{
       display: flex;
       flex-direction: row;
+      position: relative;
     }
     .profileparent img{
-    
+    flex-wrap: wrap;
       margin-left: 30%;
     }
 
     .profileparent p{
       position: absolute;
-      text-align: justify;
+      flex-wrap: wrap;
+
+      
     
 
     padding-top: 14%;
@@ -77,7 +80,7 @@
    
   }
 
-  #mapcard{
+  .mapcard{
     height: 500px;
   }
   
