--- a/styles/base.css
+++ b/styles/base.css
@@ -60,7 +60,7 @@ header, footer{
 
 
 }
-.profileparent h2{
+.profileparent p{
     font-size: 25px;
     text-align: center;
     font-style: oblique;
