--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,29 +1,38 @@
 @media screen and (min-width: 500px){
     
     
-<<<<<<< HEAD
     .profileparent{
       display: flex;
       flex-direction: row;
-      position: relative;
+      gap: 2rem;
+      
+    
+      
     }
-    .profileparent img{
-    flex-wrap: wrap;
+    .profileparent img{    
       margin-left: 30%;
+      box-shadow: 2px 10px 10px white;
+      border: solid rgb(40, 117, 9);
+      
+     
     }
 
-    .profileparent p{
-      position: absolute;
-      flex-wrap: wrap;
+    .profileparent>p{
+      text-align: left;
+      flex: 1 100%;
+      padding-top: 15%;
+      
 
       
-=======
+      
     
->>>>>>> b863beef558207676c55be99edcdb041da1157b2
+         
     
- 
-     
-    
+
+    /* padding-top: 14%;
+    padding-left: 45%;
+      */
+    }
 
 
   
@@ -82,7 +91,7 @@
    
   }
 
-  .mapcard{
+  #mapcard{
     height: 500px;
   }
   
