--- a/styles/larger.css
+++ b/styles/larger.css
@@ -40,7 +40,7 @@
     }
     .myNav li { 
       display: block;
-      flex: 1 1 100%
+      flex: 1 1 100%;
     }
 
     
@@ -90,22 +90,7 @@
     height: 500px;
   }
 
-  /* discovery page css update */
-
-  .major-grid{
-    display: grid;
-    grid-template-columns: 40% 60%;
-    max-width: 80%;
-    margin-left: 10%;
-
-
-  }
-
-  /* rounded corners - boxmodel */
-  .photo-galary section img:hover {border-radius: 15px 150px;}
-
-  .major-grid section img:hover{opacity: .5;}
-
+  
   
     
 }
