--- a/styles/form.css
+++ b/styles/form.css
@@ -1,8 +1,25 @@
+
+:root {
+	--back: rgb(20, 54, 37);
+  --back2: hsla(150, 71%, 15%, 0.5);
+  --foredark: hsla(0,0%,10%,1);
+	--forelight: hsla(0,0%,100%,1);
+	--border: hsla(0, 0%, 8%, 0.8);
+	--borderlight: hsla(0,0%,33%,.3);
+	--shadow: hsl(0,0%,50%);
+	--zebra: hsl(0, 0%, 93%, 1);
+
+
+
+}
+
+
+
 form fieldset{
     margin: 2rem 0;
-    border: 1px solid blue;
+    border: 1px solid rgb(46, 46, 177);
     border-radius: 10px;
-    padding: .5rem 2%;
+    padding: 0.5rem 2%;
 
 }
 
